--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +12,9 @@
 <body>
     <header>
         <div class="container">
-            <img src="./img/logo.jpg" alt="TruckMe Logo" id="logo">
+            <a href="#banner">
+                <img src="./img/logo.jpg" alt="TruckMe Logo" id="logo">
+            </a>
             <div class="hamburger">
                 <i class="fas fa-bars"></i>
             </nav>
@@ -25,7 +26,7 @@
                 <li><a href="#servicos">Serviços</a></li>
                 <li><a href="#contatos">Contatos</a></li>
             </ul>
-        </div>
+        </nav>
     </header>
     <section id="banner">
         <div class="container">
@@ -42,8 +43,7 @@
                     A Truckme é uma empresa inovadora no setor de transporte e logística,
                     dedicada a proporcionar soluções eficientes e personalizadas para nossos clientes. Nossa solução
                     inteligente surgiu devido a necessidade de inovação e agilidade no modelo tradicional dos processos
-                    de frete,
-                    objetivando dinamizar o dia a dia dos nossos clientes e trazer muito mais economia.
+                    de frete.
                 </p>
                 <div id="more-text" style="display:none;">
                     <h1 class="sobre__caption">Nossa Missão</h1>
@@ -57,7 +57,6 @@
             </div>
         </div>
     </section>
-
     <section id="servicos">
         <div class="container">
             <div class="table-container">
@@ -109,8 +108,8 @@
         </div>
     </section>
     <section id="gallery__section">
+        <h2 class="servicos__gallery">Galleria de Fotos</h2>
         <div class="container">
-            <h2 class="servicos__gallery">Galleria de Fotos</h2>
             <div class="gallery-wrap">
                 <img src="./img/carrousel/back.png" id="backBtn" alt="Voltar">
                 <div class="gallery">
